# scid-agent-showcase

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
configs/: workflow.json
configs/comorbidity/: symptom_network.json
configs/questions/: core_anxiety.json  core_mood.json  overview.json  screening.json
configs/schemas/: comfort_response.json  core_symptom_evidence.json  evaluator_decision.json  mde_criterion_a1.json  overview_evidence.json  panic_attack_evidence.json  risk_assessment.json  screening_response.json
docs/: architecture.md  public_release_manifest.md
examples/: run_showcase.py
examples/transcripts/: synthetic_case.md
server/: __init__.py  config.py
server/orchestrator/: __init__.py  event_bus.py  events.py  flow_controller.py  session_state.py
server/rules/: __init__.py  differential.py
server/services/: __init__.py  comorbidity.py  question_repository.py  report_service.py  transcript_importer.py  workflow_loader.py
server/utils/: __init__.py  logger.py
tests/: test_replay.py  test_showcase_flow.py
